[package]
name = "aimesh"
version = "0.1.0"
edition = "2021"
authors = ["YASSERRMD"]
description = "High-performance AI agent message queue with cost-aware routing"
license = "MIT"
repository = "https://github.com/YASSERRMD/AiMesh"
keywords = ["ai", "message-queue", "routing", "quic", "distributed"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

# HTTP client for Barq APIs
reqwest = { version = "0.11", features = ["json"] }

# Hashing
blake3 = "1.5"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation (v7 for time-ordering)
uuid = { version = "1.6", features = ["v7"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
bytes = "1.5"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
tempfile = "3.9"

[build-dependencies]
prost-build = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
opt-level = 3
