[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimesh"
version = "0.1.0"
description = "Python SDK for AiMesh - High-Performance AI Agent Message Queue"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "YASSERRMD", email = "YASSERRMD@users.noreply.github.com"}
]
keywords = ["ai", "message-queue", "routing", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/YASSERRMD/AiMesh"
Documentation = "https://github.com/YASSERRMD/AiMesh/tree/main/sdk/python"
Repository = "https://github.com/YASSERRMD/AiMesh"
Issues = "https://github.com/YASSERRMD/AiMesh/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimesh*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
